# HashRust

./: .gitattributes  .gitignore  2025-12-27-CODE_REVIEW_GEMINI.md  CLAUDE.md  Cargo.toml  README.md  hashfile.ps1
.claude/: hookify.require-pre-commit-checks.local.md
.claude/skills/pre-commit/: SKILL.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  release.yml  rust.yml
.zed/: tasks.json
docs/plans/: 2026-02-09-OPUS_CODE_REVIEW.md  2026-02-28-CODE_REVIEW_SONNET.md  code-review-2026-06-11.md  code-review-remediation-2026-03-18.md
scripts/: pre-commit.sh
src/: classes.rs  crc32.rs  hasher.rs  main.rs  main_new.rs  progress.rs  unit_tests.rs
src/cli/: args.rs  config.rs  mod.rs
src/core/: mod.rs  types.rs  worker.rs
src/hash/: algorithms.rs  crc32.rs  digest_impl.rs  mod.rs
src/io/: files.rs  mod.rs
tests/: integration_tests.rs
