[package]
name = "hash_rust"
version = "1.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
codegen-units = 1
lto = 'fat'
strip = true

[dependencies]
strum = { version = ">= 0.24.1", features = ["derive"], default-features = false }
anyhow = "> 1.0.68"
digest = { default-features = false, version = "> 0.10.5" }
git-version = "> 0.3.4"
glob = "> 0.3.0"
hex = ">= 0.4.3"
pico-args = ">= 0.5"
rayon = ">= 1.6"
readonly = ">= 0.2.11"
generic-array = ">= 0.12"
byteorder = { default-features = false, version = ">= 1.5.0" }
md-5 = { default-features = false, version = "> 0.10.4" }
sha1 = { default-features = false, version = "> 0.10.4" }
sha2 = { default-features = false, version = "> 0.10.4" }
sha3 = { default-features = false, version = "> 0.10.5" }
whirlpool = { default-features = false, version = ">= 0.10.4" }
blake2 = { default-features = false, version = ">= 0.10.6" }
crc32fast = { default-features = false, version = ">= 1.3.2" }
