[package]
name = "hash_rust"
version = "1.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
codegen-units = 1
lto = 'fat'
strip = true

[dependencies]
strum = { version = ">= 0.27.1", features = ["derive"], default-features = false }
anyhow = ">= 1.0.98"
digest = { default-features = false, version = "> 0.10.5" }
git-version = ">= 0.3.9"
glob = ">= 0.3.2"
hex = ">= 0.4.3"
data-encoding = ">= 2.9.0"
pico-args = ">= 0.5"
rayon = ">= 1.10"
readonly = ">= 0.2.13"
generic-array = ">= 0.2"
byteorder = { default-features = false, version = ">= 1.5.0" }
md-5 = { default-features = false, version = ">= 0.10.6" }
sha1 = { default-features = false, version = ">= 0.10.6" }
sha2 = { default-features = false, version = ">= 0.10.8" }
sha3 = { default-features = false, version = ">= 0.10.8" }
whirlpool = { default-features = false, version = ">= 0.10.4" }
blake2 = { default-features = false, version = ">= 0.10.6" }
crc32fast = { default-features = false, version = ">= 1.4.2" }
