[package]
name = "hash_rust"
version = "1.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# panic = 'abort'
codegen-units = 1
lto = 'fat'
strip = true

[dependencies]
strum = { version = "0.28", features = ["derive"], default-features = false }
anyhow = "1.0"
digest = { default-features = false, version = "0.10" }
git-version = "0.3"
glob = "0.3"
hex = "0.4"
data-encoding = "2.10"
pico-args = "0.5"
rayon = "1.11"
# readonly = "0.2"
generic-array = "1.3"
byteorder = { default-features = false, version = "1.5" }
md-5 = { default-features = false, version = "0.10" }
sha1 = { default-features = false, version = "0.10" }
sha2 = { default-features = false, version = "0.10" }
sha3 = { default-features = false, version = "0.10" }
whirlpool = { default-features = false, version = "0.10" }
blake2 = { default-features = false, version = "0.10" }
crc32fast = { default-features = false, version = "1.5" }
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.0"
